<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/bookmarks" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/email"
            android:title="@string/email_developer"/>

        <item

            android:id="@+id/nav_call"
            android:icon="@drawable/call"
            android:title="@string/call_developer" />

        <item
            android:id="@+id/clear_cache"
            android:icon="@drawable/cache"
            android:title="@string/clear_cache" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />


    </group>

</menu>

