<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/round_pic_of_nurujjaman_pollob"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingBottom="16dp"
        android:src="@drawable/profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/njps_multimedia"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_gravity="center|center_horizontal"
        android:textColor="?attr/profile_txt_c"
        android:textStyle="bold"
        android:padding="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:shadowColor="?attr/profile_txt_c"
        android:shadowDx="0.5"
        android:shadowDy="0.5"
        android:shadowRadius="0.6"
        android:text="@string/verion"
        android:textColor="?attr/profile_txt_c"
        android:textStyle="bold" />

</LinearLayout>

